# proteinsmc

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  ROADMAP.md  SCALING.md  coverage.json  pyproject.toml  requirements.txt  ruff.toml  temp_cai_calc.py  test.ipynb  test_oed_deserialization.py
.agent/: workspace.id
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.hypothesis/constants/: 056c47d979b962ed  0ca07d4d4e792cad  15e000ff60826981  1a0ab35e33f22095  1cf884fe70fb503e  1e54f468141ac9aa  201301c46f1bce1d  25e3efa6ca600577  29da4bc022b8bce1  3a5135ac27e1fa99  3c46cd419e2f9f9e  3f149c840081fe6c  431d769a8876ec48  5298d1dc102e45c7  60e23636ea91bb5c  693ba9bcb8654bee  6e5e40e7ea4f7e90  6f31fd43e7f16ff5  734f973e8c59463d  7530892b942f9caf  82f3726c8ff10259  8430473fe6db1f20  85b3ed3285c9f467  8ff173c255013c12  9d7c9858511c2db2  a776c64ac4a98ae4  b107b7444c642e5b  b6129423e84bb55d  b838ef828cb7fce5  ccc2e7d536d16b9d  ce192c465cb297d5  d43adf49c1f86cc4  d64b78a1be9f1e54  dbc48ae3edd0dccc  dbd3539e3b05e1d2  de59c2a6652e1ac7  df1cc54af3f2b10f  e0ab4c3c84bb3b13  e36b840efcf1793f  e7b2aa9825107beb  (+4 more)
.praxia/: identity.json  mission.md
.praxia/cache/: analyzer.db
.praxia/docs/: INDEX.md  migration-manifest.txt
docs/: FAILING_TESTS_ANALYSIS.md  OED_TRACKING.md  OED_TRACKING_SUMMARY.md  TESTING_COVERAGE_ASSESSMENT.md
proteinsmc/: __init__.py
proteinsmc/sampling/: gibbs.py  mcmc.py  nuts.py  parallel_replica.py  smc.py
proteinsmc/scoring/: mpnn.py
proteinsmc/utils/: __init__.py  annealing_schedules.py  constants.py  translate.py
scripts/: run_deserialization_manual.py  run_oed_deserialization_manual.py  view_oed_tracking.py
src/: experiment.py  initiation.py  main.py  mpnn.py  mutate.py
src/proteinsmc/: __init__.py  io.py  padding.py  runner.py  types.py
src/proteinsmc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sampling/: gibbs.py  hmc.py  mcmc.py  nk_landscape.py  nuts.py  parallel_replica.py  smc.py
src/scoring/: cai.py  mpnn.py
src/utils/: __init__.py  annealing_schedules.py  combined_fitness.py  constants.py  fitness.py  metrics.py  mutate.py  nucleotide.py  protein_nucleotide_utils.py  resample.py  resampling.py  smc_utils.py  translate.py  types.py
tests/: __init__.py  conftest.py  test_deserialization.py  test_end_to_end_io.py  test_io.py  test_oed_deserialization.py  test_runner.py  test_runner_jax_inputs.py  test_smc.py
tests/io/: test_io.py
tests/models/: conftest.py  test_annealing.py  test_base.py  test_fitness.py  test_gibbs.py  test_hmc.py  test_mcmc.py  test_memory.py  test_mutation.py  test_nk_landscape.py  test_nuts.py  test_parallel_replica.py  test_parallel_replica_advanced.py  test_sampler_base.py  test_sampler_base_advanced.py  test_smc.py  test_translation.py  test_types.py
tests/oed/: test_experiment_integration.py  test_gp.py  test_nk.py  test_opt.py  test_phase.py  test_smc_tree.py  test_tracking.py
tests/sampling/: test_gibbs.py  test_hmc.py  test_hmc_loop.py  test_initialization_factory.py  test_mcmc.py  test_mcmc_loop.py  test_nk_landscape.py  test_nuts.py  test_nuts_loop.py  test_parallel_replica.py  test_smc.py  test_ste.py
tests/scoring/: test_cai.py  test_combine.py  test_esm.py  test_mpnn.py
tests/utils/: test_annealing.py  test_annealing_schedules.py  test_blackjax_utils.py  test_combined_fitness.py  test_config_unpacker.py  test_constants.py  test_esm.py  test_fitness.py  test_fitness_advanced.py  test_initiate.py  test_jax_utils.py  test_key_management.py  (+12 more)
tmp_oed_output/: data.arrayrecord  metadata.json
tmp_oed_output6/: metadata.json
tmp_oed_output7/: metadata.json
tmp_oed_output_final/: metadata.json
(+94 files in other folders)
