[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteinsmc"
version = "0.1.0"
description = "A package for protein sequence Monte Carlo."
requires-python = ">=3.11"
dependencies = [
  "jax",
  "blackjax",
  "dill",
  "flax",
  "chex",
  "jaxtyping",
  "equinox",
  "uuid-utils",
  "safetensors",
  "prxteinmpnn @ git+https://github.com/maraxen/prxteinmpnn.git",
  "einops>=0.8.1",
  "huggingface-hub>=0.35.3",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "hypothesis"
]

[tool.setuptools]
package-dir = {"" = "src"}
  
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ty>=0.0.1a21",
]
