[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteinsmc"
version = "0.1.0"
description = "A package for protein sequence Monte Carlo."
requires-python = ">=3.11"
dependencies = [
  "jax",
  "blackjax",
  "dill",
  "flax",
  "chex",
  "jaxtyping",
  "equinox",
  "uuid-utils",
  "safetensors",
  "prxteinmpnn @ git+https://github.com/maraxen/prxteinmpnn.git",
  "einops>=0.8.1",
  "huggingface-hub>=0.35.3",
  "array-record>=0.8.1",
  "msgpack-numpy>=0.4.8",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}
  
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.140.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
    "ty>=0.0.1a21",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxext-rediraffe",
    "sphinx-book-theme",
    "myst-nb",
]
