[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteinsmc"
version = "0.1.0"
description = "A package for protein sequence Monte Carlo."
requires-python = ">=3.11"
dependencies = [
  "jax",
  "blackjax",
  "dill",
  "flax",
  "chex",
  "jaxtyping",
  "equinox",
  "uuid-utils",
  "safetensors",
  "prxteinmpnn",
  "einops>=0.8.1",
  "huggingface-hub>=0.35.3",
  "array-record>=0.8.1",
  "msgpack-numpy>=0.4.8",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"" = "src"}
  
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
fix = true
indent-width = 2
exclude = [".venv", "venv", "build", "dist", "__pycache__", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "PD",
  "D203",
  "D213",
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["T201"]  # Allow print statements in CLI scripts

[project.optional-dependencies]
dev = [
    "hypothesis>=6.140.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
    "ty>=0.0.1a21",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "sphinx-autobuild",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinxext-rediraffe",
    "sphinx-book-theme",
    "myst-nb",
]

[tool.ty.environment]
root = ["src/proteinsmc"]

[tool.ty.rules]
invalid-type-form = "ignore"

